<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/movies"
            android:id="@+id/nav_movies"
            android:icon="@mipmap/ic_movie_black_24dp">
            <menu>
                <item
                    android:id="@+id/nav_movies_playing"
                    android:title="@string/latest" />
                <item
                    android:id="@+id/nav_movies_toplated"
                    android:title="@string/top_rated" />
                <item
                    android:id="@+id/nav_movies_popular"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/nav_movies_upcoming"
                    android:title="@string/upcoming" />
            </menu>
        </item>
        <item android:title="@string/favourite"
            android:id="@+id/nav_fav">
            <menu>
                <item
                    android:id="@+id/nav_fav_movies"
                    android:title="@string/movies"/>
            </menu>

        </item>
    </group>

</menu>
